# wasm-rr

./: .gitignore  .spellcheck.yml  404.html  AGENTS.md  CLAUDE.md  C_TO_WASIP2.md  Cargo.toml  GOLDEN_TESTS.md  GO_TO_WASIP2.md  README.md  cli-reference.html  dictionary.txt  docs-hash.txt  flake.nix  index.html  print.html  result  searchindex.js  toc.html  toc.js
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  flakehub-publish.yml
docs/: WASI.md  book.toml  build-cli-docs.sh  cli-tools-wasm-compilation-analysis.md
docs/feature-plans/: golden-testing.md  input-streams.md  known-failures-golden-tests.md
docs/src/: SUMMARY.md  architecture.md  cli-reference.md  contributing.md  getting-started.md  introduction.md  limitations.md  recording-replaying.md  recording.md  replaying.md  trace-formats.md
examples/bench_num/: Cargo.toml
examples/c_hello_world/: hello.c
examples/dog/: Cargo.toml
examples/fetch_quote/: Cargo.toml
examples/fizzbuzz_zig/: main.zig
examples/go_hello_world/: main.go
examples/hello_haskell/: Main.hs  hello-haskell.cabal
examples/js_wordstats/: index.js
examples/print_random/: Cargo.toml
examples/print_time/: Cargo.toml
examples/read_stdin/: Cargo.toml
golden/bench_num/: metadata.toml  stderr.txt  stdout.txt  trace.json
golden/c_hello_world/: metadata.toml
golden/counts/: metadata.toml  stdout.txt  trace.json
golden/fetch_quote/: metadata.toml  stdout.txt  trace.json
golden/fizzbuzz_zig/: metadata.toml  stderr.txt  stdout.txt  trace.json
golden/go_hello_world/: metadata.toml  stdout.txt  trace.json
golden/hello_haskell/: metadata.toml  stdout.txt  trace.json
golden/hello_python/: metadata.toml  stdout.txt  trace.json
golden/js_wordstats/: metadata.toml  stdout.txt  trace.json
golden/print_args/: metadata.toml  stdout.txt  trace.json
golden/print_random/: metadata.toml  stdout.txt  trace.json
golden/print_time/: metadata.toml  stdout.txt  trace.json
golden/read_stdin/: metadata.toml  stderr.txt  stdout.txt  trace.json
nix/: compile_c.nix  compile_go.nix  compile_haskell.nix  compile_javascript.nix  compile_python.nix  compile_rust.nix  compile_zig.nix  coverage.nix  golden-fixture.sh  golden-test.sh  program-counts.nix
src/: lib.rs  main.rs  playback.rs  recorder.rs
src/engine/: mod.rs
src/trace/: convert.rs  (+3 more)
tests/: convert_roundtrip.rs  file_io.rs
(+16 files in other folders)
