[package]
name = "wasm-rr"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = { version = "37.0.1", features = ["component-model"] }
wasmtime-wasi = { version = "37.0.1" }
wasmtime-wasi-http = { version = "37.0.1" }
anyhow = "1.0"
wasmtime-wasi-io = "37.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
