[package]
name = "wasm-rr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wasm-rr"
path = "src/main.rs"

[dependencies]
wasmtime = { version = "37.0.2", default-features = false, features = ["component-model", "std", "cranelift"] }
wasmtime-wasi = { version = "37.0.2" }
wasmtime-wasi-http = { version = "38.0.3" }
anyhow = "1.0"
wasmtime-wasi-io = "37.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"
clap = { version = "4.5", features = ["derive"] }
clap-markdown = "0.1"
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
bytes = "1.0"

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
tempfile = "3.0"
