cabal-version: 2.4
name:          hello-haskell
version:       0.1.0.0
synopsis:      Simple Hello World example in Haskell for WASM
description:   A minimal Haskell program that prints "Hello, World!" compiled to WebAssembly
license:       BSD-3-Clause
author:        wasm-rr contributors
maintainer:    wasm-rr contributors

executable hello-haskell
  main-is:          Main.hs
  build-depends:    base >=4.14 && <5
  default-language: Haskell2010
  ghc-options:      -Wall -O2